# simple-cm

./: CMakeLists.txt  README  connection.cpp  connection.h  protocol.cpp  protocol.h  simpleCm_export.h  simpleservice.cpp  simpleservice.h  textchannel.cpp  textchannel.h
SimpleCM/: Connection  Protocol  TextChannel
example/: AccountHelper.cpp  AccountHelper.hpp  CComboBoxDelegate.hpp  CContactsModel.cpp  CContactsModel.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ManagerPreset.hpp  PresetsLoader.cpp  PresetsLoader.hpp  main.cpp
src/: CMakeLists.txt  Chat.cpp  Chat.hpp  JsonUtils.cpp  JsonUtils.hpp  Message.hpp  ServiceLowLevel.cpp  ServiceLowLevel.h  ServiceLowLevel_p.h  connection.cpp  connection.h  protocol.cpp  protocol.h  service.cpp  service.h  simplecm_export.h  textchannel.cpp  textchannel.h
src/SimpleCM/: ServiceLowLevel
tools/: CMakeLists.txt
tools/engineering-cm/: AccountHelper.cpp  AccountHelper.hpp  AccountsModel.cpp  AccountsModel.hpp  CComboBoxDelegate.cpp  CContactsModel.cpp  CContactsModel.hpp  CMakeLists.txt  ContactsModel.cpp  ContactsModel.hpp  HelperAccountsModel.cpp  HelperAccountsModel.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ManagerPreset.hpp  PresetsLoader.cpp  README.md
